--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "docx-merger": "^1.2.2",
     "docxtemplater": "^3.67.6",
     "docxtemplater-image-module-free": "^1.1.1",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "fs": "^0.0.1-security",
     "html-to-docx": "^1.8.0",
