changed the mail service

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "html-to-docx": "^1.8.0",
     "jszip": "^3.10.1",
     "path": "^0.12.7",
-    "pizzip": "^3.2.0",
-    "resend": "^6.9.2"
+    "pizzip": "^3.2.0"
   }
 }
