--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "docxtemplater-image-module-free": "^1.1.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "fs": "^0.0.1-security",
+    "helmet": "^8.1.0",
     "html-to-docx": "^1.8.0",
     "jszip": "^3.10.1",
     "path": "^0.12.7",
-    "pizzip": "^3.2.0"
+    "pizzip": "^3.2.0",
+    "xss-clean": "^0.1.4"
   }
 }
